--- a/PruebaInterfaz_Copia/nbproject/project.properties
+++ b/PruebaInterfaz_Copia/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.40-bin.jar=lib/mysql-connector-java-5.1.40-bin.jar
+file.reference.PlaceHolder.jar=lib/PlaceHolder.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.40-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
+    ${file.reference.PlaceHolder.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
