Hasta añadir eliminar finalmente

--- a/PruebaInterfaz_Copia/nbproject/project.properties
+++ b/PruebaInterfaz_Copia/nbproject/project.properties
@@ -32,11 +32,10 @@ excludes=
 file.reference.mysql-connector-java-5.1.40-bin.jar=lib/mysql-connector-java-5.1.40-bin.jar
 file.reference.PlaceHolder.jar=lib/PlaceHolder.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
-    ${file.reference.PlaceHolder.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.PlaceHolder.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
