--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /PruebaInterfaz_Copia/build/
 /PruebaInterfaz_Copia/nbproject/private/
 /PruebaInterfaz_Copia/dist/
+/ProyectoFinal/nbproject/private/
