--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /PruebaInterfaz_Copia/nbproject/private/
 /PruebaInterfaz_Copia/dist/
 /ProyectoFinal/nbproject/private/
+/ProyectoFinal/build/
+/ProyectoFinal/dist/
