--- a/ProyectoFinal/lib/cfg/conexion.properties
+++ b/ProyectoFinal/lib/cfg/conexion.properties
@@ -1,7 +1,7 @@
-ip = localhost:3306
+ip = 79.148.236.236:3306
 
-db = prueba_local
+db = pgutierrez_UD6
 
-user = root
+user = pgutierrez
 
 password = Nervion1**
