--- a/ProyectoFinal/lib/cfg/conexion.properties
+++ b/ProyectoFinal/lib/cfg/conexion.properties
@@ -1,7 +1,5 @@
-ip = 79.148.236.236:3306
-
-db = pgutierrez_UD6
-
-user = pgutierrez
-
-password = Nervion1**
+#Cambio valores cfg
+#Mon May 18 12:11:42 CEST 2020
+user=root
+db=test
+ip=localhost\:3306
