--- a/ProyectoFinal/lib/cfg/conexion.properties
+++ b/ProyectoFinal/lib/cfg/conexion.properties
@@ -1,5 +1,5 @@
 #Cambio valores cfg
-#Mon May 18 12:11:42 CEST 2020
-user=root
-db=test
-ip=localhost\:3306
+#Mon May 18 18:30:35 CEST 2020
+user=pgutierrez
+db=pgutierrez_UD6
+ip=79.148.236.236\:3306
